# atcoder

./: .gitignore  .practice.dSYM.icloud  ABC_146_A.py  LookingBackBase.md  README.md  a.out  atcoder.code-workspace  hello3.cpp  prac_diff_type_var  practice.md  practice1.cpp  pyproject.toml
cpp/: maximum_prfit.cpp  prac_diff_type_var.cpp  practice  practice3_calc.cpp
cpp/otherwise/: ex4_year.cpp  exercise3.cpp  prac_var.cpp  practice.cpp  practice4_0.cpp
heuristic/intro/: a.cpp  a2.cpp  b.cpp  c.cpp
practice/cpp/: bit.cpp  s1.cpp
python/ABC_051/: B_SumOfThreeIntegers.py
python/ABC_061/: B_CountingRoads.py
python/ABC_074/: C_SugarWater.py
python/ABC_080/: B_HarshadNumber.py
python/ABC_082/: A_RoundUpTheMean.py  B_TwoAnagrams.py
python/ABC_088/: A_InfiniteCoins.py
python/ABC_096/: C_HalfAndHalf.py
python/AGC_013/: A_SortedArrays.py
python/koredake/: ABC_049_C.py  ABC_081_A.py  ABC_081_B.py  ABC_083_B.py  ABC_085_B.py  ABC_085_C.py  ABC_086_A.py  ABC_086_C.py  ABC_087_B.py  ABC_088_B.py  README.md  select_sort.py  test.ipynb
rust/: Makefile  README.md  compete.toml
rust/abc196/: Cargo.toml
rust/abc246/: Cargo.toml
rust/abc247/: Cargo.toml
rust/abc281/: Cargo.toml
tessoku/: A01.py  A02.py  A03.py  A04.py  A05.py  A06.py  A07.py  A08.py  A09.py  A10.py  A11.cpp  A11.py  A12.cpp  A12.py  A13.cpp  A13.py  A14.cpp  A14.py  A15.cpp  A15.py  A16.cpp  A16.py  A17.cpp  A17.py  A18.cpp  A18.py  A19.py  A21.py  A22.py  A23.py  A24.py  A26.py  A26_eratosthenes.py  A27.py  A28.py  A30.py  A31.py  A32.py  A34.py  A36.py  (+61 more)
typical90/: README.md
(+499 files in other folders)
