[tool.poetry]
name = "atcode python"
version = "0.1.0"
description = ""
authors = ["daikichiba9511 <daikichiba.hokkaido@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
